...
    android:focusableInTouchMode="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/uiBtnSettings"
        android:layout_width="wrap_content"
        android:layout_height="56sp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
...
        app:layout_constraintStart_toEndOf="@+id/uiBtnSettings"
        app:layout_constraintTop_toTopOf="parent">

    </SearchView>

    <Spinner
        android:id="@+id/uiDropSort"
        android:layout_width="0dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="7dp"
...
